--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h2{
     padding: 1rem;
     border-radius: 1rem;
     width: 60vmin;
+    align-self: center;
 }
 
 form{
@@ -79,4 +80,12 @@ form button{
     color: #283618;
     font-size: 1rem;
     cursor: pointer;
+}
+
+@media (max-width: 480px){
+   .dropdown{
+    flex-direction: column;
+    }
+   
+    
 }
